--- a/client/src/components/UserImage/UserImage.module.scss
+++ b/client/src/components/UserImage/UserImage.module.scss
@@ -3,6 +3,11 @@
   justify-content: center;
   align-items: center;
 
+  padding: 5px;
+  text-transform: uppercase;
+  margin-right: 15px;
+  color: white;
+
   border-radius: 50%;
   min-width: 30px;
   min-height: 30px;
