--- a/client/src/pages/HomePage/HomePage.module.scss
+++ b/client/src/pages/HomePage/HomePage.module.scss
@@ -1,12 +1,46 @@
+
 .container{
   display: flex;
   justify-content: center;
   background-color: #E7EBF0;
   box-sizing: border-box;
+  min-height: 100vh;
+  min-width: 200px;
+
 }
 
-@import "src/components/ChatList/ChatList.module";
+.allChats{
 
-.itemContainer{
-  @extend .itemContainer;
+  max-width: 10vw;
+  min-width: 10vw;
+  width:100%;
+
+  div{
+    cursor:pointer;
+    padding: 15px;
+    text-align: center;
+
+  }
+}
+
+
+
+form{
+  width: 100%;
+  text-align: center;
+  box-sizing: border-box;
+  button{
+    border: 1px solid #e0e4e9;
+    padding: 5px 20px;
+    margin-top: 10px;
+    background-color: white;
+    cursor: pointer;
+    &:hover{
+      border: 1px solid lightblue;
+    }
+  }
+  input{
+    padding: 5px;
+    margin-top: 5px;
+  }
 }
