--- a/client/src/pages/HomePage/HomePage.module.scss
+++ b/client/src/pages/HomePage/HomePage.module.scss
@@ -16,7 +16,9 @@
     cursor: pointer;
     padding: 15px;
     text-align: center;
-
+    &:hover {
+      background-color: lightgrey;
+    }
   }
 }
 
