fix: burger menu on outside click action

--- a/client/src/components/BurgerMenu/BurgerMenu.module.scss
+++ b/client/src/components/BurgerMenu/BurgerMenu.module.scss
@@ -13,13 +13,10 @@
   transition: all ease 0.5s;
 }
 
-.burgerCheck:checked ~ .content {
+.showContent {
+  @extend .content;
   overflow-y: auto;
   max-width: 25vmax;
-}
-
-.burgerCheck {
-  display: none;
 }
 
 .burger {
