--- a/client/src/components/MessageList/MessageList.module.scss
+++ b/client/src/components/MessageList/MessageList.module.scss
@@ -12,7 +12,6 @@
 }
 
 .messageListContainer{
-
   flex-basis: 50%;
 
   box-sizing: border-box;
@@ -39,7 +38,18 @@
 }
 
 .inputWrapper {
+
   min-width: 100%;
   min-height: 50px;
   background-color: white;
+}
+
+.formStyles{
+  display: flex;
+  flex-direction: column;
+  div:first-child{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+  }
 }
