--- a/client/src/pages/HomePage/HomePage.module.scss
+++ b/client/src/pages/HomePage/HomePage.module.scss
@@ -1,3 +1,11 @@
+.header {
+  background-color:lightgray;
+  @media (max-width: 800px) {
+    background-color: #E7EBF0;
+  }
+
+}
+
 .container {
   display: flex;
   justify-content: center;
@@ -15,13 +23,14 @@
     cursor: pointer;
     padding: 15px;
     text-align: center;
+
     &:hover {
       background-color: lightgrey;
     }
   }
 }
 
-body{
+body {
   max-height: 100vh;
   overflow-y: hidden;
 }
@@ -48,10 +57,4 @@ form {
     padding: 5px;
     margin-top: 5px;
   }
-}
-
-.burgerMenuContainer {
-  position: absolute;
-  left: 0;
-  z-index: 5;
 }
