refactor: reformat code & bugfixes

--- a/client/src/pages/HomePage/HomePage.module.scss
+++ b/client/src/pages/HomePage/HomePage.module.scss
@@ -2,7 +2,7 @@
   background-color:lightgray;
   display: flex;
   justify-content: space-between;
-  div{
+  &>div{
     display: flex;
     align-items: center;
   }
